--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.19.2",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
@@ -37,6 +38,7 @@
     "@tailwindcss/postcss": "^4.1.6",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "prisma": "^6.7.0",
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9"
   }
