--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "email": "email dev",
     "start": "next start",
     "lint": "next lint"
   },
@@ -22,9 +23,11 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.6",
+    "@react-email/components": "0.0.41",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "inngest": "^3.36.0",
     "lucide-react": "^0.510.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
@@ -35,6 +38,7 @@
     "react-hook-form": "^7.56.3",
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
+    "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
@@ -46,6 +50,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "prisma": "^6.7.0",
+    "react-email": "4.0.14",
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9"
   }
