--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@arcjet/inspect": "^1.0.0-beta.7",
     "@arcjet/next": "^1.0.0-beta.7",
     "@clerk/nextjs": "^6.19.2",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-checkbox": "^1.3.1",
